Add git ref docker image

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
       - name: Build Container image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest -t ${{ secrets.DOCKER_REPO }}:${{ github.ref }} .
       - name: Publish Docker image
         run: docker push ${{ secrets.DOCKER_REPO }}
