--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -34,9 +34,12 @@ jobs:
           java-version: 11
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
       - name: Login to Docker Hub
         run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
-      - name: Build Container image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
-      - name: Publish Docker image
-        run: docker push ${{ secrets.DOCKER_REPO }}
+      - name: Build & Push Container image
+        run: docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_REPO }}:latest .
