--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -41,5 +41,5 @@ jobs:
           version: latest
       - name: Login to Docker Hub
         run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
-      - name: Build & Push Container image
+      - name: Build & Push Docker Image
         run: docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_REPO }}:latest .
