ignore own account when retweeting

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,4 @@ spring:
 search: "stupidSearchThatHopefullyNeverMatches"
 location-search: "stupidLocationSearchThatHopefullyNeverMatches"
 location-to-follow: "stupidToFollowThatHopefullyNeverMatches"
+own-handle: "stupidHandleThatHopefullyDoesntExist"
