--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <caffeine-version>2.8.6</caffeine-version>
         <ecs-logging-java-version>0.5.2</ecs-logging-java-version>
         <java.version>11</java.version>
+        <maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
         <sortpom-maven-plugin-version>2.12.0</sortpom-maven-plugin-version>
         <twitter4j-version>4.0.7</twitter4j-version>
     </properties>
@@ -90,6 +91,11 @@
                         <phase>verify</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin-version}</version>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
