--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -5,9 +5,9 @@ on:
     branches: [ master ]
 
 jobs:
-  build-and-test:
+  build-and-test-maven:
 
-    name: Build and Test
+    name: Build and Test Maven
     runs-on: ubuntu-latest
 
     steps:
@@ -19,3 +19,51 @@ jobs:
 
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
+
+  build-docker-image:
+
+    name: Build Docker image
+    runs-on: ubuntu-latest
+    needs: [ build-and-test-maven ]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+      - name: Available QEMU platforms
+        run: echo ${{ steps.qemu.outputs.platforms }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: buildx builder instance name
+        run: echo ${{ steps.buildx.outputs.name }}
+      - name: Available buildx platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build project with Maven
+        run: mvn -B package --file pom.xml
+      - name: Build image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: false
+          tags: |
+            ${{ secrets.DOCKER_REPO }}:${{ github.run_number }}-${{ github.sha }}
+            ${{ secrets.DOCKER_REPO }}:latest
+      - name: Docker image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
