--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'adopt'
+          java-version: '11'
+          java-package: jdk
 
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
@@ -46,7 +48,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          distribution: 'adopt'
+          java-version: '11'
+          java-package: jdk
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
       - name: Build image
