--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.4
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
           java-package: jdk
 
       - name: Build project with Maven
@@ -50,11 +50,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
           java-package: jdk
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
