--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2.3.4
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
           java-package: jdk
 
       - name: Build project with Maven
@@ -45,11 +45,11 @@ jobs:
         run: echo ${{ steps.buildx.outputs.name }}
       - name: Available buildx platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
           java-package: jdk
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
