Introduce Mastodon specific config and packages

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
 
 
 account-properties:
-  accounts:
+  twitter:
     -
       name: stupidAccount
       bearerToken: stupidbearerToken
@@ -48,6 +48,18 @@ account-properties:
           consumerKey: stupidConsumerKey
           consumerSecret: stupidConsumerSecret
       search: stupidSearchThatHopefullyNeverMatches
+      location-search: stupidLocationSearchThatHopefullyNeverMatches
+      location-to-follow: stupidLocationToFollowThatHopefullyNeverMatches
+      ignored-accounts:
+        - stupidAccount1ThatHopefullyNeverMatches
+        - stupidAccount2ThatHopefullyNeverMatches
+  mastodon:
+    - name: stupidAccount
+      instance: stupidInstance
+      oauth:
+        accessToken: stupidAccessToken
+        accessTokenSecret: stupidAccessTokenSecret
+      redirectUri: stupidRedirectUri
       location-search: stupidLocationSearchThatHopefullyNeverMatches
       location-to-follow: stupidLocationToFollowThatHopefullyNeverMatches
       ignored-accounts:
