--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,7 @@
   <description>Twitter Retweet Bot</description>
 
   <properties>
-    <caffeine-version>3.1.2</caffeine-version>
-    <ecs-logging-java-version>1.5.0</ecs-logging-java-version>
     <java.version>17</java.version>
-    <maven-surefire-plugin-version>3.0.0-M7</maven-surefire-plugin-version>
-    <sortpom-maven-plugin-version>3.0.0</sortpom-maven-plugin-version>
     <twitter4j-version>4.0.7</twitter4j-version>
   </properties>
 
@@ -27,12 +23,12 @@
     <dependency>
       <groupId>co.elastic.logging</groupId>
       <artifactId>logback-ecs-encoder</artifactId>
-      <version>${ecs-logging-java-version}</version>
+      <version>1.5.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
-      <version>${caffeine-version}</version>
+      <version>3.1.2</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -89,7 +85,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin-version}</version>
+        <version>3.0.0-M7</version>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
