--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
   <properties>
     <java.version>17</java.version>
-    <twitter4j-version>4.0.7</twitter4j-version>
   </properties>
 
   <dependencies>
@@ -29,6 +28,11 @@
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
       <version>3.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220924</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -52,12 +56,7 @@
     <dependency>
       <groupId>org.twitter4j</groupId>
       <artifactId>twitter4j-core</artifactId>
-      <version>${twitter4j-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.twitter4j</groupId>
-      <artifactId>twitter4j-stream</artifactId>
-      <version>${twitter4j-version}</version>
+      <version>4.1.2</version>
     </dependency>
   </dependencies>
 
