add user-leve auth to Mastodon and enable reposting

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,6 +62,7 @@ account-properties:
         oauth:
           accessToken: stupidAccessToken
           accessTokenSecret: stupidAccessTokenSecret
+          authorizationCode: stupidAuthorizationCode
         redirectUri: stupidRedirectUri
         location-search: stupidLocationSearchThatHopefullyNeverMatches
         location-to-follow: stupidLocationToFollowThatHopefullyNeverMatches
